add_executable(keygen keygen.cpp)
add_executable(client_lwe client_lwe.cpp)
add_executable(client_rlwe client_rlwe.cpp)
add_executable(cloud cloud.cpp)
add_executable(verify verify.cpp)

target_link_libraries(keygen tfhe++)
target_link_libraries(client_lwe tfhe++)
target_link_libraries(client_rlwe tfhe++)
target_link_libraries(cloud tfhe++)
target_link_libraries(verify tfhe++)
